syntax = "proto3";

package ru.otus.exchange.blobstorage.api.grpc.v1;

service BlobStorageService {
  rpc getObject(StorageKey) returns (StorageData);
  rpc putObject(StorageData) returns (OpResult);
  rpc removeObject(StorageKey) returns (OpResult);
  rpc isExists(StorageKey) returns (OpResult);
  rpc removeObjects(Exchange) returns (OpResult);
}


message OpResult {
  bool result = 1;
}

message Exchange {
  string exchange = 1;
}

message StorageKey {
  string exchange = 1;
  string key = 2;
}

message Metadata {
  int32 size = 1;
  string sha256Digest = 2;
}

message StorageData {
  Metadata metadata = 1;
  bytes data = 2;
}

